--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1075,7 +1075,7 @@ the form-control fails to do that so we do the border ourselves */
  */
 .far,
 .fas,
-.fab, {
+.fab {
     pointer-events: none;
 }
 
