--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -138,8 +138,10 @@
 
     <!-- CREATE A GROUP -->
     <label for='teamGroupCreate'>{{ 'Create a group'|trans }}</label>
-    <input class='form-control col-md-4 custom-control-inline' id='teamGroupCreate' type='text' />
-    <button type='submit' data-action='create-teamgroup' data-teamid='{{ App.Users.userData.team }}' id='teamGroupCreateBtn' class='button btn btn-primary'>{{ 'Create'|trans }}</button>
+    <div class='form-inline'>
+      <input class='form-control col-md-4 mr-2' id='teamGroupCreate' type='text' />
+      <button type='submit' data-action='create-teamgroup' data-teamid='{{ App.Users.userData.team }}' id='teamGroupCreateBtn' class='button btn btn-primary'>{{ 'Create'|trans }}</button>
+    </div>
     <!-- END CREATE GROUP -->
 
     <!-- SHOW EXISTING GROUPS -->
@@ -397,10 +399,10 @@
     <h3>{{ 'Manage tags of the team'|trans }}</h3>
     <hr>
     <p>{{ 'From here you can add, edit or delete the tags for your team. Click the tag to edit it. Then click the deduplicate button to merge similar tags.'|trans }}</p>
-    <div class='form-group'>
     <label for='adminAddTagInput'>{{ 'Add a tag'|trans }}</label>
-    <input class='form-control col-md-4 custom-control-inline' id='adminAddTagInput'>
-    <button class='button btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-action='admin-add-tag'>{{ 'Save'|trans }}</button>
+    <div class='form-group form-inline'>
+      <input class='form-control col-md-4 mr-2' id='adminAddTagInput'>
+      <button class='button btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-action='admin-add-tag'>{{ 'Save'|trans }}</button>
     </div>
     <hr>
     <button class='button btn btn-primary' data-action='deduplicate-tag'><i class='fas fa-clone mr-1 text-white'></i>{{ 'Deduplicate'|trans }}</button>
