fix template not loading in ucp if locked

--- a/src/templates/templates-view.html
+++ b/src/templates/templates-view.html
@@ -12,4 +12,5 @@
   {% set body = Entity.entityData.body %}
 {% endif %}
 <div id='body_view'>{{ body|raw }}</div>
+<div id='metadataDiv' class='col-md-6'></div>
 {% include 'steps-links-view.html' %}
