make tables appear with borders even if they don't have borders
see #4145

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -476,8 +476,8 @@ github issue #52 */
 }
 
 /* prettier tables in mceditable area */
-.txt table,
-.txt table td {
+#body_view table:not([border]),
+#body_view table td:not([border]) {
     border: 1px solid $maingray;
 }
 
