update Search Syntax

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -13,7 +13,7 @@
       <div class='modal-body' data-wait='{{ 'Please wait…' }}'>
         <h3>Search terms</h3>
         <p>The search is performed against title, body, date, and elabid.<br>
-            The entire team will be searched unless there is an author fields.</p>
+            The entire team will be searched unless there is an author field.</p>
         <dl>
           <dt>Term</dt>
           <dd>A sequence of characters without space (<code>&blank;</code>),
@@ -118,6 +118,8 @@
           <dd>Term or Quoted term</dd>
           <dt><span class='token keyword'>group</span></dt>
           <dd>Term or Quoted term</dd>
+          <dt><span class='token keyword'>id</span></dt>
+          <dd>Id (integer) of an experiment or item</dd>
           <dt><span class='token keyword'>locked</span></dt>
           <dd><span class='token boolean'>yes</span> or <span class='token boolean'>no</span>,
               <span class='token boolean'>true</span> or <span class='token boolean'>false</span>,
