--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -158,11 +158,11 @@
         {% if Entity.entityData.tags|length > 0 %}
           <span class='tags mathjax-ignore d-flex-inline flex-wrap'>
             <i class='fas fa-tags mr-2'></i>
-            {% set tagsIdArr = Entity.entityData.tags_id|split(',') %}
+            {% set tagsIdArr = Entity.entityData.tags_ids|split(',') %}
             {% set tagsValueArr = Entity.entityData.tags|split('|') %}
             {% for key, tag in tagsValueArr %}
               {# the key allows to get the id stored in tagsIdArr #}
-              <a class='tag' href='?mode=show&tags%5B%5D={{ tag|url_encode }}'>{{ tag|raw }}</a>
+              <a class='tag' href='?mode=show&amp;tags%5B%5D={{ tag|url_encode }}'>{{ tag|raw }}</a>
             {% endfor %}
           </span>
         {% endif %}
