implement enforce MFA (local auth only) (#4120)
* implement enforce MFA
see feature request #2943

---------

Co-authored-by: Nicolas CARPi <nico-git@deltablot.email>

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -247,19 +247,22 @@
         </div>
       {% endif %}
 
+      {# only show MFA setting if not enforced #}
+      {% if showMFA %}
         <h4>{{ 'Two Factor Authentication'|trans }}</h4>
         <div class='row'>
           <div class='col-md-6'>
             <label for='use_mfa'>{{ 'Use two-factor authentication?'|trans }}</label>
             <select class='form-control' autocomplete='off' name='use_mfa' id='use_mfa'>
-              <option value='on'{{ App.Users.userData.mfa_secret ? ' selected' }}>{{ 'Yes'|trans }}</option>
-              <option value='off'{{ not App.Users.userData.mfa_secret ? ' selected' }}>{{ 'No'|trans }}</option>
+              <option value='on' {{- App.Users.userData.mfa_secret ? ' selected' }}>{{ 'Yes'|trans }}</option>
+              <option value='off' {{- not App.Users.userData.mfa_secret ? ' selected' }}>{{ 'No'|trans }}</option>
             </select>
           </div>
         </div>
-        <div class='mt-4 text-center'>
-          <button type='submit' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
-        </div>
+      {% endif %}
+      <div class='mt-4 text-center'>
+        <button type='submit' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+      </div>
     </form>
 
   <hr><br>
