--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -1,30 +1,31 @@
 <div class='side-panel' id='favtagsPanel' hidden>
-  <div class='m-2'>
-    <a class='float-right' data-action='toggle-favtags' title='{{ 'Close'|trans }}'>
+  <!-- Close favtags panel arrow (bouncy). In a div to maximize trigger area -->
+  <div class='float-right bounce-left mr-2 mt-2'>
+    <a data-action='toggle-favtags' title='{{ 'Close'|trans }}'>
         <i class='fas fa-chevron-left fa-2x'></i>
     </a>
-    <h3>{{ 'Favorite tags'|trans }}</h3>
-    <div class='input-group'>
-      <input data-action='favtags-search' class='form-control form-inline' type='text' placeholder='{{ 'Filter'|trans }}' />
-      <div class='input-group-append'>
-        <button data-action='clear-favtags-search' class='btn btn-outline-secondary'><i class='fas fa-times fa-fw'></i></button>
-      </div>
+  </div>
+  <h3 class='p-2'>{{ 'Favorite tags'|trans }}</h3>
+  <div class='input-group p-2'>
+    <input data-action='favtags-search' class='form-control form-inline' type='text' placeholder='{{ 'Filter'|trans }}' />
+    <div class='input-group-append'>
+      <button data-action='clear-favtags-search' class='btn btn-outline-secondary'><i class='fas fa-times fa-fw'></i></button>
     </div>
   </div>
-  <ul>
+  <div class='d-flex flex-column'>
     {% for favtag in favTagsArr %}
-    <li data-action='add-tag-filter' data-tag='{{ favtag.tag }}' class='{{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : ''}}'>
+    <div data-action='add-tag-filter' data-tag='{{ favtag.tag }}' class='side-panel-item {{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : ''}}'>
       {{ favtag.tag }}<a href='#' class='float-right mr-2' data-id='{{ favtag.tags_id }}' data-action='destroy-favtags' hidden><i class='fas fa-trash-alt'></i></a>
-    </li>
+    </div>
     {% endfor %}
-  </ul>
-  <div class='m-2'>
-    <input type='text' id='createFavTagInput' data-autocomplete='tags' class='form-control createFavTagInput' placeholder='{{ 'Add a tag as favorite'|trans }}' hidden />
   </div>
-  <a data-action='toggle-addfav' href='#'>
+  <div class='m-2'>
+    <input type='text' id='createFavTagInput' data-autocomplete='tags' class='form-control createFavTagInput' placeholder='{{ 'Start typing a tag'|trans }}' hidden />
+  </div>
+  <a data-action='toggle-addfav' href='#' title='{{ 'Add a tag as favorite'|trans }}'>
     <i class='m-2 fas fa-plus-circle fa-2x'></i>
   </a>
-  <a data-action='toggle-favtags-edit' href='#'>
+  <a data-action='toggle-favtags-edit' href='#' title='{{ 'Edit list'|trans }}'>
     <i class='m-2 fas fa-pencil-alt fa-2x'></i>
   </a>
 </div>
