--- a/src/templates/show-templates-edit.html
+++ b/src/templates/show-templates-edit.html
@@ -1,31 +1,20 @@
-<div class='box' style='min-height: 600px;'>
-  <div class='row'>
-    <div class='col'>
-      <h3><i class='fas fa-layer-group'></i> {{ 'Experiments Templates'|trans }}</h3>
-    </div>
-    <!-- CREATE NEW AND IMPORT BUTTONS -->
-    <div class='col text-right'>
-      <div class='btn-group mt-1'>
-        <div class='btn-group dropleft' role='group'>
-          <button type='button' id='btnGroupDrop1' class='btn btn-primary dropdown-toggle dropdown-toggle-split' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>
-            <span class='sr-only'>{{ 'Toggle create new menu'|trans }}</span>
-          </button>
-          <div class='dropdown-menu' aria-labelledby='btnGroupDrop1'>
-            <div data-action='show-import-tpl' class='dropdown-item'><i class='fas fa-upload fa-fw'></i> {{ 'Import from file'|trans }} (.eln)</div>
-            <!-- disable the reordering for now
-            <div class='dropdown-divider'></div>
-            <a id='toggleReorder' class='dropdown-item'><i class='fas fa-sort fa-fw' data-fa-transform='rotate-90 down-1'></i> {{ 'Reorder templates'|trans }}</a>
-            -->
-          </div>
-        </div>
-        <button type='button' class='btn btn-primary' data-action='create-template'>{{ 'Create'|trans }}</button>
-      </div>
-      <input type='file' aria-hidden='true' hidden accept='.eln' id='import_tpl' class='form-control mt-1'>
-    </div>
-  </div>
-  <hr>
+<h3 class='p-2 pl-3 section-title'><i class='fas fa-layer-group'></i> {{ 'Experiments Templates'|trans }}</h3>
 
-  {% include 'show-templates-select.html' %}
+<!-- CREATE NEW AND IMPORT BUTTONS -->
+<div class='pl-3 mt-3 mb-5'>
+  <button type='button' class='btn btn-primary' data-action='create-template'>{{ 'Create'|trans }}</button>
+  <div class='vertical-separator d-inline'></div>
+  <button type='button' class='btn btn-secondary' data-action='show-import-tpl'>{{ 'Import from file'|trans }} (.eln)</button>
+  <input type='file' aria-hidden='true' hidden accept='.eln' id='import_tpl' class='form-control mt-2 col-md-3'>
+</div>
+
+  {% if App.Request.query.has('templateid') %}
+    <a href='?tab=3'>
+      <i class='fas fa-chevron-left mr-1'></i>{{ 'Back to listing'|trans }}
+    </a>
+  {% else %}
+    {% include 'show-templates-select.html' %}
+  {% endif %}
 
   {% if Entity.entityData %}
   <div id='templatesDiv'>
@@ -105,5 +94,4 @@
   </div>
   {% endif %}
 
-</div>
 <div id='info' data-page='template-edit' data-type='experiments_templates' data-id='{{ Entity.id }}'></div>
