--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -115,43 +115,40 @@
 
 <!-- TAB 2 INFO -->
 <div data-tabcontent='2' hidden>
-    <div class='alert alert-success'><i class='fas fa-info-circle'></i>
-    {{ 'You belong to the %s team.'|trans|format(teamArr.name) }}
-    {{ 'Members'|trans }}: {{ teamsStats.totusers }} − {% trans %}Experiment{% plural teamStats.totxp %}Experiments{% endtrans %}: {{ teamsStats.totxp }} ({{ teamsStats.totxpts }} timestamped) − {{ 'Items'|trans }}: {{ teamsStats.totdb }}
-    </div>
+  <div class='alert alert-success'><i class='fas fa-info-circle'></i>
+  {{ 'You belong to the %s team.'|trans|format(teamArr.name) }}
+  {{ 'Members'|trans }}: {{ teamsStats.totusers }} − {% trans %}Experiment{% plural teamStats.totxp %}Experiments{% endtrans %}: {{ teamsStats.totxp }} ({{ teamsStats.totxpts }} timestamped) − {{ 'Items'|trans }}: {{ teamsStats.totdb }}
+  </div>
 
-<section class='box'>
-    <h5><i class='fas fa-users'></i> {{ 'Members'|trans }}</h5>
-    <table id='teamtable' class='table' aria-describedby='pageTitle' data-table-sort='true'>
-      <thead>
-        <tr>
-            <th>{{ 'Name'|trans }}</th>
-            <th>{{ 'Email'|trans }}</th>
-            <th>ORCID</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- archived users are hidden on this page -->
-        {% for user in App.Users.readAllFromTeam()|filter(u => u.archived == 0) %}
-        <tr>
-          <td>
-            <a href='experiments.php?owner={{ user.userid }}'>
-              <span>
-                {{ user.fullname|raw }}
-                {% if user.usergroup in range(1, 3) %}
-                  ({{ 'Admin'|trans }})
-                {% endif %}
-              </span>
-            </a>
-          </td>
-          <td><a href='mailto:{{ user.email }}'>{{ user.email }}</a></td>
-          <td>{{ user.orcid }}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-</section>
-
+  <h3 class='p-2 pl-3 section-title'><i class='fas fa-users'></i> {{ 'Members'|trans }}</h3>
+  <table id='teamtable' class='table' aria-describedby='pageTitle' data-table-sort='true'>
+    <thead>
+      <tr>
+          <th>{{ 'Name'|trans }}</th>
+          <th>{{ 'Email'|trans }}</th>
+          <th>ORCID</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- archived users are hidden on this page -->
+      {% for user in App.Users.readAllFromTeam()|filter(u => u.archived == 0) %}
+      <tr>
+        <td>
+          <a href='experiments.php?owner={{ user.userid }}'>
+            <span>
+              {{ user.fullname|raw }}
+              {% if user.usergroup in range(1, 3) %}
+                ({{ 'Admin'|trans }})
+              {% endif %}
+            </span>
+          </a>
+        </td>
+        <td><a href='mailto:{{ user.email }}'>{{ user.email }}</a></td>
+        <td>{{ user.orcid }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 </div>
 
 <!-- TAB 3 TEMPLATE -->
@@ -163,23 +160,20 @@
 
 <!-- TAB 4 EMAIL -->
 <div data-tabcontent='4' hidden>
-<section class='box'>
-    <h5><i class='fas fa-envelope'></i> {{ 'Send an email to all team members'|trans }}</h5>
-    <form id='emailTeamForm' method="post" action="app/controllers/TeamController.php">
-        {{ App.Session.get('csrf')|csrf }}
-        <input type='hidden' name='emailTeam' />
-        <div class="form-group">
-            <label for="emailSubject">{{ 'Subject'|trans }}</label>
-            <input type='text' id='emailSubject' name='subject' class='form-control' required />
-            <label for="emailBody">{{ 'Content'|trans }}</label>
-            <textarea form='emailTeamForm' id='emailBody' name='body' class='form-control' rows='10' required></textarea>
-        </div>
-        <div class='mt-4 text-center'>
-            <button type='submit' class='button btn btn-primary'>{{ 'Send'|trans }}</button>
-        </div>
-    </form>
-
-</section>
+  <h3 class='p-2 pl-3 mb-3 section-title'><i class='fas fa-envelope'></i> {{ 'Send an email to all team members'|trans }}</h3>
+  <form class='pl-3' id='emailTeamForm' method='post' action='app/controllers/TeamController.php'>
+    {{ App.Session.get('csrf')|csrf }}
+    <input type='hidden' name='emailTeam' />
+    <div class='form-group'>
+      <label for='emailSubject'>{{ 'Subject'|trans }}</label>
+      <input type='text' id='emailSubject' name='subject' class='form-control' required />
+      <label for='emailBody'>{{ 'Content'|trans }}</label>
+      <textarea form='emailTeamForm' id='emailBody' name='body' class='form-control' rows='10' required></textarea>
+    </div>
+    <div class='mt-4 text-center'>
+      <button type='submit' class='button btn btn-primary'>{{ 'Send'|trans }}</button>
+    </div>
+  </form>
 </div>
 
 <div id='info'
